refactoring, changed behavioral specification

--- a/behavioral_analysis/dn_ba_08_parameter_recovery_REF.ipynb
+++ b/behavioral_analysis/dn_ba_08_parameter_recovery_REF.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "import sys\n",
     "sys.path.append('/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code')\n",
-    "from dn_utils.behavioral_models import load_behavioral_data, estimate_values_pd"
+    "from dn_utils.behavioral_models_REF import load_behavioral_data"
    ]
   },
   {
@@ -24,9 +24,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of beh array: (32, 2, 110, 21)\n",
+      "Shape of beh array: (32, 2, 110, 23)\n",
       "Conditions [(0, 'rew'), (1, 'pun')]\n",
-      "Columns: [(0, 'block'), (1, 'rwd'), (2, 'magn_left'), (3, 'magn_right'), (4, 'response'), (5, 'rt'), (6, 'won_bool'), (7, 'won_magn'), (8, 'acc_after_trial'), (9, 'onset_iti'), (10, 'onset_iti_plan'), (11, 'onset_iti_glob'), (12, 'onset_dec'), (13, 'onset_dec_plan'), (14, 'onset_dec_glob'), (15, 'onset_isi'), (16, 'onset_isi_plan'), (17, 'onset_isi_glob'), (18, 'onset_out'), (19, 'onset_out_plan'), (20, 'onset_out_glob')]\n"
+      "Columns: [(0, 'block'), (1, 'block_bci'), (2, 'side'), (3, 'side_bci'), (4, 'magn_left'), (5, 'magn_right'), (6, 'response'), (7, 'rt'), (8, 'won_bool'), (9, 'won_magn'), (10, 'acc_after_trial'), (11, 'onset_iti'), (12, 'onset_iti_plan'), (13, 'onset_iti_glob'), (14, 'onset_dec'), (15, 'onset_dec_plan'), (16, 'onset_dec_glob'), (17, 'onset_isi'), (18, 'onset_isi_plan'), (19, 'onset_isi_glob'), (20, 'onset_out'), (21, 'onset_out_plan'), (22, 'onset_out_glob')]\n"
      ]
     }
    ],
@@ -66,17 +66,15 @@
     "        button presses are -1 and 1. \n",
     "    '''\n",
     "\n",
-    "\n",
     "    n_trials = beh.shape[2]\n",
     "    val, util, magn = (np.zeros((n_trials, 2)) for _ in range(3))\n",
     "    p, response = (np.zeros((n_trials)) for _ in range(2))\n",
     "    val[0] = [.5, .5] # Initial belefis (agnostic)\n",
     "\n",
-    "    rwd = np.copy(beh[subject, condition, :, meta['dim4'].index('rwd')]) #BCI\n",
-    "\n",
+    "    side_bci = np.copy(beh[subject, condition, :, meta['dim4'].index('side_bci')])\n",
+    "    side = np.copy(beh[subject, condition, :, meta['dim4'].index('side')])\n",
     "    magn[:, 0] = beh[subject, condition, :, meta['dim4'].index('magn_left')]\n",
     "    magn[:, 1] = beh[subject, condition, :, meta['dim4'].index('magn_right')]\n",
-    "\n",
     "\n",
     "    for t in range(0, n_trials):\n",
     "\n",
@@ -88,17 +86,13 @@
     "        response[t] = np.random.choice([-1, 1], p=[1-p[t], p[t]])\n",
     "\n",
     "        # Use correct learning rate for trial\n",
-    "        if condition == 0:\n",
-    "            alpha = alpha_plus * (rwd[t] == response[t]) \\\n",
-    "                  + alpha_minus * (rwd[t] != response[t])\n",
-    "        else:\n",
-    "            alpha = alpha_plus * ((-1)*rwd[t] == response[t]) \\\n",
-    "                  + alpha_minus * ((-1)*rwd[t] != response[t])\n",
-    "\n",
+    "        alpha = alpha_plus * (side[t] == response[t]) \\\n",
+    "              + alpha_minus * (side[t] != response[t])\n",
+    "        \n",
     "        # Update val before next trial (ignore last update)\n",
     "        if t < n_trials-1: \n",
-    "            val[t+1, 1] = val[t, 1] + alpha * ((rwd[t] + 1)/2 - val[t, 1])\n",
-    "            val[t+1, 0] = val[t, 0] + alpha * ((-rwd[t] + 1)/2 - val[t, 0])\n",
+    "            val[t+1, 1] = val[t, 1] + alpha * ((side_bci[t] + 1)/2 - val[t, 1])\n",
+    "            val[t+1, 0] = val[t, 0] + alpha * ((-side_bci[t] + 1)/2 - val[t, 0])\n",
     "\n",
     "\n",
     "    return response"
@@ -114,9 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot copy sequence with size 2 to array axis with dimension 110",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c0748f3e64f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m                     generate_responses_pd(beh, meta, \n\u001b[1;32m     21\u001b[0m                                           \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                                           ap, am, bt)\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: cannot copy sequence with size 2 to array axis with dimension 110"
+     ]
+    }
+   ],
    "source": [
     "n_gridpoints_alpha_plus = 10\n",
     "n_gridpoints_alpha_minus = 10\n",
@@ -144,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
