refactored ba notebooks, added paramer recovery analysis

--- a/behavioral_analysis/dn_ba_02_log_processing_REF.ipynb
+++ b/behavioral_analysis/dn_ba_02_log_processing_REF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -13,7 +13,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import json\n",
-    "import os "
+    "import os \n",
+    "import scipy.io"
    ]
   },
   {
@@ -38,83 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Behavioral data conventions\n",
-    "\n",
-    "## Files\n",
-    "Behavioral data is stored in two separate files `behavioral_data_clean_all.npy` and `behavioral_data_clean_all.json`. File with *.npy extension is array containing actual data and corresponding *.json file contains names of corresponding fields. \n",
-    "1. Aggregated behavioral data loaded from `behavioral_data_clean_all.npy` is called is represented as `beh` variable in the code. \n",
-    "2. Corresponding metadata dictionary is called as `meta` variable in the code. \n",
-    "\n",
-    "## Fields\n",
-    "Aggregated behavioral data contains **all task information, all behavioral responses  / recordings and timing of all scanner events**.  Multidimensional array `beh` aggregates data for subjects, conditions, trials for different events. Shape of the array is $N_{subjects} \\times N_{conditions} \\times N_{trials} \\times N_{variables}$. \n",
-    "\n",
-    "### Task structure variables\n",
-    "| variable name | code | values |\n",
-    "|--|--|--|\n",
-    "| Correct side (block) | `block` | -1 / 1 |\n",
-    "| Chosen side (block) | `block_bci` | -1 / 1 |\n",
-    "| Correct side | `side` | -1 / 1 |\n",
-    "| Chosen side | `side_bci` | -1 / 1 |\n",
-    "| Left-side magnitude | `magn_left` | `int` from -45 to 45 |\n",
-    "| Right-side magnitude | `magn_right` | `int` from -45 to 45 |\n",
-    "\n",
-    "Note the distinction between correct and chosen side. Correct is related to human utility interpretation where correct means *rewarded or not punished*. Chosen is related to **being chosen interpretation** where chosen means *rewarded or punished* (it is used for RL algorithm calculations). In the reward condition all sides that are chosen are correct at the same time, whereas in the punishment condition all sides that are chosen are incorrect. In different parts of the code, different interpretation are used, so they are separately defined to avoid confusion.\n",
-    "\n",
-    "### Subject's behavioral variables\n",
-    "| variable name | code | values |\n",
-    "|--|--|--|\n",
-    "| Response | `response` | -1 / 0 / 1 |\n",
-    "| Reaction time (s) | `rt` | `float` from 0 to 1.5 / `nan` |\n",
-    "| Correct choice label | `won_bool` | 0 / 1 |\n",
-    "| Account update | `won_magn` | `int` from -45 to 45 |\n",
-    "| Account balance (after trial) | `acc_after_trial` | `int` from 0 to 2300 |\n",
-    "\n",
-    "Response variable is coded the same way as in task structure variables. It is often desirable to convert -1 / 1 coding into 0 / 1 coding, as it is more convenient for JAGS to represent direct probabilities that one side will be chosen. However, in order to incorporate intuitive representation of missing responses as 0, default coding is -1 / 0 / 1 for left / miss / right. \n",
-    "\n",
-    "### Scanner timing variables\n",
-    "| variable name | code |\n",
-    "|--|--|\n",
-    "| main fmri clock time (used for analysis)|`onset_[iti/dec/isi/out]`|\n",
-    "| planned time of stimulus presentation (planned time for stimulus presentation (always slightly behind registered time)| `onset_[iti/dec/isi/out]_plan`|\n",
-    "| time registered with global clock (only for synchronization validation purpose, not used for analysis) |  `onset_[iti/dec/isi/out]_glob` \n",
-    "\n",
-    "Subscripts represent different events related with single trial. `iti` reflects inter-trial-interval onset (before each trial), `dec` is decision phase onset, `isi` is inter-stimulus-interval onset (waiting phase onset) and `out` is outcome phase onset.\n",
-    "\n",
-    "## Latent algorithm variables\n",
-    "\n",
-    "### Algorithm parameters\n",
-    "| variable name | code | text |\n",
-    "|--|--|--|\n",
-    "| learning rate | `alpha` | $\\alpha$ |\n",
-    "| learning rate for positive PE | `alpha_plus` / `alpha[first_index]` | $\\alpha_+$ |\n",
-    "| learning rate for negative PE | `alpha_minus` / `alpha[second_index]` | $\\alpha_-$ |\n",
-    "| learning rate for reward condition | `alpha_rew` / `alpha[first_index]` | $\\alpha_{rew}$ |\n",
-    "| learning rate for punishment condition | `alpha_pun` / `alpha[second_index]` | $\\alpha_{pun}$ |\n",
-    "| inverse-temperature | `beta` | $\\beta$ |\n",
-    "| loss aversion (prospect theory) | `gamma` | $\\gamma$ |\n",
-    "| risk aversion (prospect theory) | `delta` | $\\delta$ |\n",
-    "\n",
-    "Note that learning rates can be represented either as separate vectors or arrays with columns corresponding to different learning rates. `first_index` and `second_index` are used instead of specific values because in Python `first_index` is 0, whereas in MATLAB it is 1 (and so on). In case of four learning rates model first dimension corresponds to task condition and second dimension corresponds to PE sign. \n",
-    "\n",
-    "\n",
-    "### Tracked and computed variables\n",
-    "| variable name | code | text |\n",
-    "|--|--|--|\n",
-    "| Expected probability for side for being chosen | `wch` / `wch_l` and `wch_r` | $\\rho$ |\n",
-    "| Expected probability for side for being correct | `wco` / `wco_l` and `wco_r` | $p$|\n",
-    "| Expected value (utility) | `util` / `util_l` and `util_r` | $v$|\n",
-    "| Reward magnitude | `magn` / `magn_l` and `magn_r` | $x$|\n",
-    "| Choice probability | `prob` / `prob_l` and `prob_r` | $P$|\n",
-    "\n",
-    "Whenever `l` and `r` suffixes are not used, **array representation** of tracked variables is assumed. In array representation $N_{trials} \\times N_{sides}$ array is representing variable state across task time course for both sides simultaneously. \n",
-    "\n",
-    "\n",
     "Function `process_log_df()` cleans behavioral response dataframe changing data types, inverting interpretation of certain variables depending on task condition and drops irrelevant columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -197,11 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/anaconda3/lib/python3.7/site-packages/pandas/core/ops/__init__.py:1115: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  result = method(y)\n"
+     ]
+    }
+   ],
    "source": [
     "path_logs = '/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/' \\\n",
     "            'data/main_fmri_study/sourcedata/behavioral/task_logs'\n",
@@ -237,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -249,7 +188,7 @@
     "\n",
     "beh = np.zeros((len(subjects), 2, 110, 23))\n",
     "\n",
-    "# create & save metadata\n",
+    "# Create & save metadata\n",
     "meta = {}\n",
     "meta['dim1'] = subjects\n",
     "meta['dim2'] = ['rew', 'pun']\n",
@@ -260,13 +199,17 @@
     "with open(meta_path, 'w') as f:\n",
     "    json.dump(meta, f, indent=4)\n",
     "\n",
-    "# create & save numpy aggregated array\n",
+    "# Create & save numpy aggregated array\n",
     "for i, (df_rew, df_pun) in enumerate(zip(df_all_rew, df_all_pun)):\n",
     "    beh[i, 0] = np.array(df_rew[1], dtype='float')\n",
     "    beh[i, 1] = np.array(df_pun[1], dtype='float')\n",
     "    \n",
-    "beh_path = os.path.join(out_path, f\"{filename}.npy\")\n",
-    "np.save(beh_path, beh)"
+    "beh_path_npy = os.path.join(out_path, f\"{filename}.npy\")\n",
+    "beh_path_mat = os.path.join(out_path, f\"{filename}.mat\")\n",
+    "\n",
+    "# Save to both numpy and MATLAB formats\n",
+    "np.save(beh_path_npy, beh)\n",
+    "scipy.io.savemat(beh_path_mat, {'beh': beh}, appendmat=False)"
    ]
   },
   {
