refactored all ba notebooks, added LICENCE

--- a/behavioral_analysis/matjags-dn/dn_bm_01_convergence_REF.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_01_convergence_REF.ipynb
@@ -9,6 +9,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import scipy.io\n",
+    "import os\n",
     "plt.style.use('ggplot')"
    ]
   },
@@ -18,11 +19,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_full = 'data/pc_factorial_run1.mat'         \n",
-    "path_pi = 'data/pc_factorial_run1_pi_only.mat'\n",
-    "path_pd = 'data/pc_factorial_run1_pd_only.mat'\n",
-    "path_seq = 'data/pc_seq_trick_run1.mat'\n",
-    "path_pdci = 'data/pdci_run1.mat'\n",
+    "path_jags_output = 'data/jags_output/'\n",
+    "\n",
+    "path_full = os.path.join(path_jags_output, 'pc_factorial_run1.mat')         \n",
+    "path_pi = os.path.join(path_jags_output, 'pc_factorial_run1_pi_only.mat')\n",
+    "path_pd = os.path.join(path_jags_output, 'pc_factorial_run1_pd_only.mat')\n",
+    "path_seq = os.path.join(path_jags_output, 'pc_seq_trick_run1.mat')\n",
+    "path_pdci = os.path.join(path_jags_output, 'pdci_run1.mat')\n",
     "\n",
     "n_subjects = 32"
    ]
@@ -32,7 +35,10 @@
    "metadata": {},
    "source": [
     "### Check convergence\n",
-    "- [Q] should I inspect traceplots?"
+    "TODO list:\n",
+    "1. inspect traceplots\n",
+    "2. change hyperpriors on $\\beta$\n",
+    "3. inspect distribution of $\\beta$ and estimate values"
    ]
   },
   {
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
