--- a/behavioral_analysis/matjags-dn/dn_bm_02_model_selection_REF.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_02_model_selection_REF.ipynb
@@ -10,10 +10,9 @@
     "import matplotlib.colors as mcolors\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
-    "\n",
     "import numpy as np\n",
     "import scipy.io\n",
-    "plt.style.use('fast')"
+    "import os"
    ]
   },
   {
@@ -183,10 +182,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_full = 'data/pc_factorial_run1.mat'       # full HLM model\n",
-    "path_null = 'data/pc_factorial_run1_null.mat'  # HLM disconnected from data\n",
-    "path_pi = 'data/pc_factorial_run1_pi_only.mat' # pz probing only PI model (z=1)\n",
-    "path_pd = 'data/pc_factorial_run1_pd_only.mat' # pz probing only PD model (z=2)\n",
+    "path_jags_output = 'data/jags_output/'\n",
+    "\n",
+    "path_full = os.path.join(path_jags_output, 'pc_factorial_run1.mat')             # full HLM model\n",
+    "path_null = os.path.join(path_jags_output, 'pc_factorial_run1_null.mat')        # HLM disconnected from data \n",
+    "path_pi = os.path.join(path_jags_output, 'pc_factorial_run1_pi_only.mat')       # pz probing only PI model (z=1)\n",
+    "path_pd = os.path.join(path_jags_output, 'pc_factorial_run1_pd_only.mat')       # pz probing only PD model (z=2)\n",
     "\n",
     "n_subjects = 32\n",
     "sublabels = [f'm{sub:02}' for sub in range(2, n_subjects+2)]"
@@ -291,7 +292,7 @@
     "\n",
     "pmp_single = np.empty((2, n_subjects), dtype=float)\n",
     "bins = np.linspace(-1, 1, 50)\n",
-    "mid = int((len(bins) - 2) / 2) # middle index for histogram\n",
+    "mid = int((len(bins) - 2) / 2) # Middle index for histogram\n",
     "\n",
     "for sub in range(n_subjects):\n",
     "    \n",
@@ -391,7 +392,7 @@
     "pmp_minu = np.empty((2, n_subjects), dtype=float)\n",
     "\n",
     "bins = np.linspace(-1, 1, 50)\n",
-    "mid = int((len(bins) - 2) / 2) # middle index for histogram\n",
+    "mid = int((len(bins) - 2) / 2) # Middle index for histogram\n",
     "\n",
     "for sub in range(n_subjects):\n",
     "    \n",
@@ -487,7 +488,7 @@
     "    'pmp_minu': pmp_minu\n",
     "}\n",
     "\n",
-    "scipy.io.savemat('data/pmp_factorial.mat', mdict, appendmat=True)"
+    "# scipy.io.savemat('data/pmp_factorial.mat', mdict, appendmat=True)"
    ]
   },
   {
@@ -503,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat = scipy.io.loadmat('data/pep_factorial.mat', squeeze_me=True)\n",
+    "mat = scipy.io.loadmat('data/vba_input/pep_factorial.mat', squeeze_me=True)\n",
     "pep_main = mat['pep_main']\n",
     "pep_single = mat['pep_single']\n",
     "pep_plus = mat['pep_plus']\n",
@@ -571,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sequential HLM"
+    "# Sequential HLM"
    ]
   },
   {
@@ -580,11 +581,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_seq = 'data/pc_seq_trick_run1.mat'       \n",
+    "path_seq = os.path.join(path_jags_output, 'pc_seq_trick_run1.mat')       \n",
     "\n",
     "sublabels = [f'm{sub:02}' for sub in range(2, n_subjects+2)]\n",
     "modelnames = ['PICI', 'PICD', 'PDCI', 'PDCD']\n",
-    "n_subjects = 32\n",
     "\n",
     "mat = scipy.io.loadmat(path_seq, variable_names=['samples'], squeeze_me=True)\n",
     "z = mat['samples']['z'].item()"
@@ -607,7 +607,7 @@
     "pmp_seq[pmp_seq == 0] = eps\n",
     "\n",
     "# Save posterior model probabilities to *.mat format\n",
-    "scipy.io.savemat('data/pmp_seq.mat', {'pmp_seq': pmp_seq}, appendmat=True)"
+    "# scipy.io.savemat('data/pmp_seq.mat', {'pmp_seq': pmp_seq}, appendmat=True)"
    ]
   },
   {
@@ -629,7 +629,7 @@
     }
    ],
    "source": [
-    "# Shouw all subjects counts of z\n",
+    "# Shou all subjects counts of z\n",
     "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(10, 6))\n",
     "ax.hist(\n",
     "    z.flatten(), \n",
@@ -691,7 +691,7 @@
     }
    ],
    "source": [
-    "mat = scipy.io.loadmat('data/pep_seq.mat', squeeze_me=True)\n",
+    "mat = scipy.io.loadmat('data/vba_input/pep_seq.mat', squeeze_me=True)\n",
     "pep_seq = mat['pep_seq']\n",
     "\n",
     "gen_pep_barplot(pep_seq, modelnames, \n",
