updating description of notebooks, refactoring dn_ba_01 and dn_ba_02

--- a/behavioral_analysis/dn_ba_01_task_logs_validation.ipynb
+++ b/behavioral_analysis/dn_ba_01_task_logs_validation.ipynb
@@ -4,29 +4,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This script takes as input path to raw task logs organized acording to BIDS scheme: all logs for single subject sits within `path_logs_raw/sub-subject_label`. Then validity of organization is checked, all missing files and duplicates are reported."
+    "## Validating PRL task logs\n",
+    "\n",
+    "This script validates raw task logs organized acording to BIDS scheme. Script features:\n",
+    "- checks proper folders and logs naming \n",
+    "- looks for missing and extra files\n",
+    "- looks for missing data within logs and removes duplicates\n",
+    "\n",
+    "---\n",
+    "**Last update**: 07.01.2020 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-m02  sub-m06  sub-m10  sub-m14  sub-m18  sub-m22  sub-m26  sub-m30\n",
+      "sub-m03  sub-m07  sub-m11  sub-m15  sub-m19  sub-m23  sub-m27  sub-m31\n",
+      "sub-m04  sub-m08  sub-m12  sub-m16  sub-m20  sub-m24  sub-m28  sub-m32\n",
+      "sub-m05  sub-m09  sub-m13  sub-m17  sub-m21  sub-m25  sub-m29  sub-m33\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import filecmp\n",
     "import pandas as pd\n",
     "\n",
-    "path_logs = \"/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/data/main_fmri_study/behavioral/task_logs\"\n",
+    "path_root = '/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/'\n",
+    "path_logs = os.path.join(\n",
+    "    path_root, \n",
+    "    'data/main_fmri_study/sourcedata/behavioral/task_logs'\n",
+    ")\n",
     "\n",
     "!ls $path_logs"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "All logs for single subject sits within `<path_logs>/sub-<subject_label>`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> No errors in folder naming.\n",
+      "--> Subjects found: \n",
+      "['m02', 'm03', 'm04', 'm05', 'm06', 'm07', 'm08', 'm09', 'm10', 'm11', 'm12', 'm13', 'm14', 'm15', 'm16', 'm17', 'm18', 'm19', 'm20', 'm21', 'm22', 'm23', 'm24', 'm25', 'm26', 'm27', 'm28', 'm29', 'm30', 'm31', 'm32', 'm33']\n",
+      "--> Total number of subjects: 32\n"
+     ]
+    }
+   ],
    "source": [
     "# Check valid folder names and infer available subjects\n",
     "subjects = []\n",
@@ -52,27 +93,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Logs not found: \n",
+      "[]\n",
+      "--> Total number of missing logs: 0\n",
+      "--> Extra files: \n",
+      "[]\n",
+      "--> Number of subs with extra files: 0\n"
+     ]
+    }
+   ],
    "source": [
     "missing, extra = [], []\n",
     "\n",
     "for subject in subjects:\n",
     "    \n",
-    "    subfolder_path = os.path.join(path_logs, 'sub-' + subject)\n",
+    "    path_subfolder = os.path.join(path_logs, 'sub-' + subject)\n",
     "    log_rew = f'{subject}_prl_DecideNet_rew.csv'\n",
     "    log_pun = f'{subject}_prl_DecideNet_pun.csv'\n",
     "    \n",
     "    # look for missing files\n",
-    "    if log_rew not in os.listdir(subfolder_path):\n",
+    "    if log_rew not in os.listdir(path_subfolder):\n",
     "        missing.append(log_rew)\n",
-    "    if log_pun not in os.listdir(subfolder_path):\n",
+    "    if log_pun not in os.listdir(path_subfolder):\n",
     "        missing.append(log_pun)\n",
     "\n",
     "    # look for extra files\n",
-    "    if len(os.listdir(subfolder_path)) != 8:\n",
-    "        extra.append([subject, len(os.listdir(subfolder_path))])\n",
+    "    if len(os.listdir(path_subfolder)) != 8:\n",
+    "        extra.append([subject, len(os.listdir(path_subfolder))])\n",
     "        \n",
     "print(f'--> Logs not found: \\n{sorted(missing)}')\n",
     "print(f'--> Total number of missing logs: {len(missing)}')\n",
@@ -90,18 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Logs with wrong shape: \n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "proper_shape = (110, 28) # log dataframe correct size\n",
     "wrong_shape, file_size, wrong_duplicates = [], [], []\n",
     "\n",
     "for subject in subjects:\n",
     "    \n",
-    "    subfolder_path = os.path.join(path_logs, 'sub-' + subject)\n",
-    "    log_rew_path = f'{subfolder_path}/{subject}_prl_DecideNet_rew.csv'\n",
-    "    log_pun_path = f'{subfolder_path}/{subject}_prl_DecideNet_pun.csv'\n",
+    "    path_subfolder = os.path.join(path_logs, 'sub-' + subject)\n",
+    "    log_rew_path = f'{path_subfolder}/{subject}_prl_DecideNet_rew.csv'\n",
+    "    log_pun_path = f'{path_subfolder}/{subject}_prl_DecideNet_pun.csv'\n",
     "    df_rew = pd.read_csv(log_rew_path)\n",
     "    df_pun = pd.read_csv(log_pun_path)\n",
     "    \n",
@@ -116,8 +179,8 @@
     "    file_size.append((log_pun_path, os.path.getsize(log_pun_path)))\n",
     "    \n",
     "    # Look if duplicates are same\n",
-    "    log_rew_path2 = f'{subfolder_path}/{subject}_prl_DecideNet_rew_2.csv'\n",
-    "    log_pun_path2 = f'{subfolder_path}/{subject}_prl_DecideNet_pun_2.csv'\n",
+    "    log_rew_path2 = f'{path_subfolder}/{subject}_prl_DecideNet_rew_2.csv'\n",
+    "    log_pun_path2 = f'{path_subfolder}/{subject}_prl_DecideNet_pun_2.csv'\n",
     "    \n",
     "    if not filecmp.cmp(log_rew_path, log_rew_path2):\n",
     "        wrong_duplicates.append(log_rew_path)\n",
@@ -125,7 +188,7 @@
     "        wrong_duplicates.append(log_pun_path)\n",
     "        \n",
     "print(f'--> Logs with wrong shape: \\n{wrong_shape}')\n",
-    "print(f'--> Logs with wrong duplicates: \\n{wrong_duplicates}')"
+    "# print(f'--> Logs with wrong duplicates: \\n{wrong_duplicates}')"
    ]
   },
   {
@@ -144,9 +207,9 @@
    "source": [
     "for subject in subjects:\n",
     "    \n",
-    "    subfolder_path = os.path.join(path_logs, 'sub-' + subject)\n",
-    "    log_rew_path = f'{subfolder_path}/{subject}_prl_DecideNet_rew.csv'\n",
-    "    log_pun_path = f'{subfolder_path}/{subject}_prl_DecideNet_pun.csv'\n",
+    "    path_subfolder = os.path.join(path_logs, 'sub-' + subject)\n",
+    "    log_rew_path = f'{path_subfolder}/{subject}_prl_DecideNet_rew.csv'\n",
+    "    log_pun_path = f'{path_subfolder}/{subject}_prl_DecideNet_pun.csv'\n",
     "    df_rew = pd.read_csv(log_rew_path)\n",
     "    df_pun = pd.read_csv(log_pun_path)\n",
     "    \n",
@@ -190,5 +253,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
