changed some of the absolute paths into relative paths

--- a/behavioral_analysis/dn_ba_07_parameter_recovery.ipynb
+++ b/behavioral_analysis/dn_ba_07_parameter_recovery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,14 @@
     "import os\n",
     "\n",
     "import sys\n",
-    "sys.path.append('/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code')\n",
+    "path_root = '../../../BONNA_decide_net'\n",
+    "sys.path.append(os.path.join(path_root, 'code'))\n",
     "from dn_utils.behavioral_models_REF import load_behavioral_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +36,7 @@
     }
    ],
    "source": [
-    "beh_path = \"/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/\" \\\n",
-    "           \"data/main_fmri_study/sourcedata/behavioral\" \n",
+    "beh_path = os.path.join(path_root, 'data/main_fmri_study/sourcedata/behavioral')\n",
     "beh, meta = load_behavioral_data(root=beh_path)\n",
     "n_subjects = beh.shape[0]\n",
     "n_conditions = beh.shape[1]\n",
@@ -45,11 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# <--- TODO: refactor\n",
     "def generate_responses_pd(beh, meta, subject, condition, \n",
     "                         alpha_plus, alpha_minus, beta):\n",
     "    '''Creates responses from artificial subject using specified parameter \n",
@@ -369,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
