refactored entire dn_utils, added two tests, updated gitignore

--- a/activation_analysis/dn_aa_00_create_model_based_regressors.ipynb
+++ b/activation_analysis/dn_aa_00_create_model_based_regressors.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating trial-wise model variables \n",
+    "\n",
+    "This script calculates values of model variables like value estimation or prediction error for each trial. Script features:\n",
+    "- loads point estimations of model parameters (e.g. learning rates)\n",
+    "- calculates trial-wise estimates of expected value and prediction error\n",
+    "- saves values to file\n",
+    "\n",
+    "---\n",
+    "**Last update**: 06.02.2020 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
