created mdkir_safe function

--- a/activation_analysis/dn_aa_00_calculate_modulations.ipynb
+++ b/activation_analysis/dn_aa_00_calculate_modulations.ipynb
@@ -38,7 +38,8 @@
     "\n",
     "from dn_utils.behavioral_models import (load_behavioral_data, \n",
     "    estimate_wbci_pd, estimate_modulation)\n",
-    "from dn_utils.plotting import plot_trial_modulation"
+    "from dn_utils.plotting import plot_trial_modulation\n",
+    "from dn_utils.misc import mkdir_safe"
    ]
   },
   {
@@ -59,6 +60,7 @@
    "source": [
     "# Directory to save modulations\n",
     "path_out = os.path.join(path_root, 'data/main_fmri_study/derivatives/nistats/modulations')\n",
+    "mkdir_safe(path_out)\n",
     "\n",
     "# Load data\n",
     "path_beh = os.path.join(path_root, 'data/main_fmri_study/sourcedata/behavioral')\n",
