refactoring dn_aa_01, fixing model-based GLM

--- a/activation_analysis/dn_aa_00_calculate_modulations.ipynb
+++ b/activation_analysis/dn_aa_00_calculate_modulations.ipynb
@@ -14,7 +14,7 @@
     "(*Note*) Usually subjects are trying to minimize overal prediction error. Here it is not precisely the case, because sometimes subject pick probabilistically worse option to maximize their winnings.\n",
     "\n",
     "---\n",
-    "**Last update**: 06.02.2020 "
+    "**Last update**: 07.02.2020 "
    ]
   },
   {
@@ -29,9 +29,6 @@
     "import os\n",
     "\n",
     "path_root = os.environ.get('DECIDENET_PATH')\n",
-    "if path_root is None:\n",
-    "    raise Exception('Please specify path to the project folder as ' \\\n",
-    "                   +'environment variable $DECIDENET_PATH')\n",
     "path_code = os.path.join(path_root, 'code')\n",
     "if path_code not in sys.path:\n",
     "    sys.path.append(path_code)\n",
@@ -62,17 +59,15 @@
     "path_out = os.path.join(path_root, 'data/main_fmri_study/derivatives/nistats/modulations')\n",
     "mkdir_safe(path_out)\n",
     "\n",
-    "# Load data\n",
+    "# Load behavioral data\n",
     "path_beh = os.path.join(path_root, 'data/main_fmri_study/sourcedata/behavioral')\n",
+    "beh, meta = load_behavioral_data(path_beh)\n",
+    "n_subjects, n_conditions, n_trials, _ = beh.shape\n",
+    "\n",
+    "# Load point estimates for learning rates\n",
     "path_param = os.path.join(path_code, 'behavioral_analysis/matjags-dn/data/' + \\\n",
     "                                     'subjects_point_estimates/alpha_pdci_mle.npy')\n",
-    "\n",
-    "beh, meta = load_behavioral_data(path_beh)\n",
-    "alpha_pdci_mle = np.load(path_param)\n",
-    "\n",
-    "n_subjects = len(meta['dim1'])\n",
-    "n_conditions = len(meta['dim2'])\n",
-    "n_trials = len(meta['dim3'])"
+    "alpha_pdci_mle = np.load(path_param)"
    ]
   },
   {
@@ -81,9 +76,9 @@
    "source": [
     "### Calculate and save parametric modulations.\n",
     "Here parametric modulations reflecting three relevant model variables are calculated:\n",
-    "- `modulation_wcor`: parametric modulation during choice phase reflecting estimated probability of choosing correct (winning / not loosing) box\n",
-    "- `modulation_exvl`: parametric modulation during choice phase reflecting Pascalian expected value\n",
-    "- `modulation_perr`: parametric modulation during outcome phase reflecting prediction error on box probability \n",
+    "- `modulations_wcor`: parametric modulation during choice phase reflecting estimated probability of choosing correct (winning / not loosing) box\n",
+    "- `modulations_exvl`: parametric modulation during choice phase reflecting Pascalian expected value\n",
+    "- `modulations_perr`: parametric modulation during outcome phase reflecting prediction error on box probability \n",
     "    - equals `1 - wcor` for correct anwers\n",
     "    - equals `0 - wcor` for incorrect answers"
    ]
@@ -94,9 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modulation_wcor = np.zeros((n_subjects, n_conditions, n_trials))\n",
-    "modulation_exvl = np.zeros((n_subjects, n_conditions, n_trials))\n",
-    "modulation_perr = np.zeros((n_subjects, n_conditions, n_trials))\n",
+    "modulations_wcor = np.zeros((n_subjects, n_conditions, n_trials))\n",
+    "modulations_exvl = np.zeros((n_subjects, n_conditions, n_trials))\n",
+    "modulations_perr = np.zeros((n_subjects, n_conditions, n_trials))\n",
     "\n",
     "for sub in range(n_subjects):\n",
     "    for con in range(n_conditions):\n",
@@ -109,13 +104,13 @@
     "        \n",
     "        wcor, exvl, perr = estimate_modulation(beh, meta, sub, con, wbci)\n",
     "        \n",
-    "        modulation_wcor[sub, con, :] = wcor\n",
-    "        modulation_exvl[sub, con, :] = exvl\n",
-    "        modulation_perr[sub, con, :] = perr\n",
+    "        modulations_wcor[sub, con, :] = wcor\n",
+    "        modulations_exvl[sub, con, :] = exvl\n",
+    "        modulations_perr[sub, con, :] = perr\n",
     "\n",
-    "np.save(os.path.join(path_out,'modulation_wcor'), modulation_wcor)\n",
-    "np.save(os.path.join(path_out,'modulation_exvl'), modulation_exvl)\n",
-    "np.save(os.path.join(path_out,'modulation_perr'), modulation_perr)"
+    "np.save(os.path.join(path_out,'modulations_wcor'), modulations_wcor)\n",
+    "np.save(os.path.join(path_out,'modulations_exvl'), modulations_exvl)\n",
+    "np.save(os.path.join(path_out,'modulations_perr'), modulations_perr)"
    ]
   },
   {
@@ -158,9 +153,9 @@
     "# Plot example regressors\n",
     "sub, con = 1, 0\n",
     "\n",
-    "plot_trial_modulation(beh, meta, sub, con, modulation_perr[sub, con, :])\n",
-    "plot_trial_modulation(beh, meta, sub, con, modulation_wcor[sub, con, :])\n",
-    "plot_trial_modulation(beh, meta, sub, con, modulation_exvl[sub, con, :])"
+    "plot_trial_modulation(beh, meta, sub, con, modulations_perr[sub, con, :])\n",
+    "plot_trial_modulation(beh, meta, sub, con, modulations_wcor[sub, con, :])\n",
+    "plot_trial_modulation(beh, meta, sub, con, modulations_exvl[sub, con, :])"
    ]
   }
  ],
