--- a/activation_analysis/dn_aa_01_first_level.ipynb
+++ b/activation_analysis/dn_aa_01_first_level.ipynb
@@ -315,9 +315,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 64-bit ('decidenet': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "decidenet"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
